--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
         "laravel-vite-plugin": "^1.2.0",
         "tailwindcss": "^4.1.4",
         "vite": "^6.2.4"
+    },
+    "dependencies": {
+        "quill": "^2.0.3"
     }
 }
